# dwan-codec

./: .gitignore  README.md  arguments.py  get_data.py  inference.py  main.ipynb  model_inference.py  model_train.py  pyproject.toml  train.py  utils.py
data/: libritts.py  vivoice.py
models/: __init__.py  decoder.py  discriminators.py  encoder.py  models.py  modules.py  vae.py
quantizers/: __init__.py  fsq.py  fsqste.py
utils/: arguments.py  dataset.py  loss.py
